# agentUniverse

./: # 按Enter接受默认保存位置  # 按Enter接受默认保存位置.pub  CHANGELOG.md  CHANGELOG_zh.md  CLEANUP_SUMMARY.md  DOCSTRING_IMPROVEMENTS_SUMMARY.md  Dockerfile  ERROR_OPTIMIZATION_README.md  IMPROVEMENTS_README.md  PHASE3_4_INTEGRATION_GUIDE.md  PR_INFO.md  QUICK_START_CONTEXT.md  README.md  README_zh.md  REAL_SCENARIO_DEMO_README.md  RELEASE_NOTE.md  STORE_IMPLEMENTATION_README.md  TOKEN_USAGE_LOGGING_SUMMARY.md  pyproject.toml  real_scenario_comparison.py  requirements.txt  simple_store_implementation.py  test_memory_store_simple.py  test_qwen.py  test_token_usage_logging.py  test_web_reader.py  阶段总结.md
.github/workflows/: admin-module-tests.yml
agent-env/: pyvenv.cfg
agent-env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jsondiff  jsonpatch  jsonpointer  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  undill
agentuniverse/: __init__.py
agentuniverse/agent/: agent.py  agent_manager.py  agent_model.py  input_object.py  output_object.py
agentuniverse/agent_serve/: service.py  service_configer.py  service_instance.py  service_manager.py
agentuniverse/ai_context/: __init__.py  agent_context.py  design_doc.md  tool_utils.py  (+1 more)
agentuniverse_product/: agentuniverse_product.py
examples/: json_reader_demo.py  security_and_performance_demo.py
scripts/: generate_prompt.py
tests/: test_performance_improvements.py  test_security_improvements.py
(+1460 files in other folders)
